fix button not centered

--- a/public/admin-page/css/style.css
+++ b/public/admin-page/css/style.css
@@ -3461,7 +3461,6 @@ tr:first-child > td > .fc-day-grid-event {
     display: -ms-flexbox;
     display: -webkit-box;
     display: flex;
-    justify-content: center;
     margin-top: 30px;
     -ms-flex-align: center;
     -webkit-box-align: center;
